# jellyfin-collection-export

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PROJECT.md  README.md  VISION.md  pyproject.toml
src/jce/: __init__.py  cli.py  config.py  cron.py  exporter.py  installer.py  jellyfin.py  utils.py
tests/: test_cli.py  test_config.py  test_cron.py  test_exporter.py  test_jellyfin.py
