[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfin-collection-export"
version = "0.1.0"
description = "Export a Jellyfin collection into a dedicated directory with hardlinks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31",
  "typer>=0.12",
]

[project.scripts]
jce = "jce.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
